Adding features to node_selector
Selection based on cluster/node features needs context to work; introducing ContextNodeSelector that allows to access context (ClientYamlTestExecutionContext) and is later adapted to a NodeSelector by binding to a context.